# baobab-auth-api

./: .env.example  CHANGELOG.md  README.md  pyproject.toml
docs/ai_workflow/runs/BL-API-010-001/: 07_handoff.md  status.yaml
docs/ai_workflow/runs/BL-API-010-002/: status.yaml
docs/ai_workflow/runs/BL-API-010-003/: status.yaml
docs/ai_workflow/runs/BL-API-010-004/: status.yaml
docs/ai_workflow/runs/BL-API-010-005/: status.yaml
docs/ai_workflow/state/: lock.yaml  queue.yaml
docs/architecture/adr/: 0001-api-layered-architecture.md
docs/backlog/backlogs/: BL-API-010-001.md  BL-API-010-002.md  BL-API-010-003.md  BL-API-010-004.md  BL-API-010-005.md  BL-API-010-006.md  BL-API-010-007.md  BL-API-010-008.md
docs/integrations/: compatibility_matrix.yaml
docs/integrations/reports/: baobab-auth-core-v0.5.1__baobab-auth-api-v0.1.0.md  baobab-auth-database-v0.1.1__baobab-auth-api-v0.1.0.md  baobab-auth-security-v0.1.1__baobab-auth-api-v0.1.0.md
docs/specifications/cahier-des-charges/: README.md  cahier_des_charges_baobab_auth_api_v0_1_0.md  cahier_des_charges_baobab_auth_api_v0_2_0.md  cahier_des_charges_baobab_auth_api_v0_3_0.md  cahier_des_charges_baobab_auth_api_v0_4_0.md  cahier_des_charges_baobab_auth_api_v0_5_0.md  cahier_des_charges_baobab_auth_api_v0_6_0.md  cahier_des_charges_baobab_auth_api_v0_7_0.md  cahier_des_charges_baobab_auth_api_v0_8_0.md  cahier_des_charges_baobab_auth_api_v0_9_0.md  cahier_des_charges_baobab_auth_api_v1_0_0.md
src/baobab_auth_api/: __init__.py  app.py  config.py  dependencies.py  error_handlers.py  lifespan.py  main.py  openapi.py
src/baobab_auth_api/exceptions/: __init__.py  api_http_error.py
src/baobab_auth_api/infrastructure/: __init__.py  app_state.py  auth_unit_of_work.py  infrastructure_factory.py  reentrant_unit_of_work.py  session_repository_timezone_adapter.py  timezone_aware_unit_of_work.py  uuid_id_generator.py
src/baobab_auth_api/mappers/: __init__.py  me_response_mapper.py  register_response_mapper.py  token_response_mapper.py
src/baobab_auth_api/routers/: __init__.py  auth_router.py  health_router.py  jwks_router.py  permissions_router.py  roles_router.py
src/baobab_auth_api/schemas/: __init__.py  error_detail.py  error_response.py  jwks_response.py  login_request.py  me_response.py  permission_response.py  refresh_request.py  register_request.py  register_response.py  role_response.py  token_response.py
src/baobab_auth_api/security/: __init__.py  bearer_claims.py  current_user_dependency.py
src/baobab_auth_api/services/: __init__.py  auth_service.py  current_user_service.py  rbac_service.py  readiness_service.py
src/baobab_auth_api/testing/: __init__.py  test_app_factory.py
tests/: conftest.py
tests/api/: test_auth_flow.py  test_health_ready.py
tests/unit/baobab_auth_api/: test_create_app.py  test_dependencies.py  test_error_handlers.py  test_main.py
(+11 files in other folders)
