[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "baobab-auth-api"
version = "0.1.0"
description = "API FastAPI d'authentification Baobab Auth."
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
authors = [{ name = "Patrick ANDRIANAIVO" }]
keywords = ["auth", "fastapi", "baobab", "jwt"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Typing :: Typed",
    "Framework :: FastAPI",
]
dependencies = [
    "baobab-auth-core>=0.5.1,<0.6.0",
    "baobab-auth-database>=0.1.1,<0.2.0",
    "baobab-auth-security>=0.1.1,<0.2.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic-settings>=2.14.2",
    "pydantic[email]>=2.10",
    "httpx>=0.28",
]

[project.urls]
Homepage = "https://github.com/baobabgit/baobab-auth-api"
Repository = "https://github.com/baobabgit/baobab-auth-api"
Documentation = "https://github.com/baobabgit/baobab-auth-api#readme"
Issues = "https://github.com/baobabgit/baobab-auth-api/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/baobab_auth_api"]

[dependency-groups]
dev = [
    "black>=24.0",
    "ruff>=0.15.20",
    "mypy>=2.1.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=0.25",
    "bandit[toml]>=1.9.4",
    "pytest-cov>=7.1.0",
    "nox>=2024.0",
    "build>=1.0",
    "twine>=6.2.0",
    "pre-commit>=4.6.0",
    "pyyaml>=6.0",
]
docs = [
    "sphinx>=9.1.0",
    "furo>=2025.12.19",
]

[tool.black]
line-length = 88
target-version = ["py313"]

[tool.ruff]
line-length = 88
target-version = "py313"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "W",
    "F",
    "I",
    "N",
    "UP",
    "B",
    "D",
    "ANN",
    "RUF",
]
ignore = [
    "D203", "D213",
    "D401",
]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D", "ANN", "N802"]
"scripts/**/*.py" = ["ANN401"]

[tool.mypy]
python_version = "3.13"
strict = true
files = ["src", "tests"]
warn_unused_configs = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "baobab_auth_core.*",
    "baobab_auth_database.*",
    "baobab_auth_security.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=src --cov-report=term-missing --cov-report=xml --cov-fail-under=95"
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
fail_under = 95
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "@(abc\\.)?abstractmethod",
]

[tool.bandit]
exclude_dirs = ["tests", ".venv"]
